# pagekeeper

./: .coderabbit.yaml  .gitignore  AGENTS.md  BOOKFUSION.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  DOCKER-PREPARATION.md  Dockerfile  FULL-INSTALLATION-GUIDE.md  LICENSE  QUICKSTART.md  README.md  TODO.md  docker-compose.dev.yml  docker-compose.example.yml  docker-compose.test.yml  pyproject.toml  pyrightconfig.json  requirements.txt  run-tests.sh  start.sh
.claude/hooks/: dev-restart-reminder.sh  enforce-docker-tests.sh
.githooks/: pre-push
.github/: AGENT_PR_GUIDELINES.md  copilot-instructions.md  pull_request_template.md
.github/workflows/: lint.yml  pr-size.yml  publish.yml  test.yml
.opencode/plans/: bookfusion-client-tests.md
alembic/: env.py
config/: private-paths.txt
dev/: 2026-03-08 - multi-user.md  app-styling-guide.md  hardcover-sync-flow.md  refactoring-plan.md  tbr-feature-plan.md  tbr-mark-as-read-decision.md  worktrees.md
future-plans/: 2026-03 - reading tracker plan.md  booklore-audio-sync.md
migrations/: ALEMBIC_MIGRATIONS.md  SQLALCHEMY_MIGRATION.md  UNIFIED_DATABASE_ARCHITECTURE.md
scripts/: backfill_grimmory_finish_dates.py  backup_db.sh  copy_prod_db.sh  verify_config.py
src/: app_runtime.py  app_setup.py  app_template_context.py  sync_manager.py  version.py  web_server.py
templates/: batch_match.html  bookfusion.html  index.html  kosync_documents.html  logs.html  match.html  migration.html  reading.html  reading_detail.html  settings.html  suggestions.html  tbr_detail.html
tests/: base_sync_test.py  conftest.py  run_all_tests.py  snapshot_helpers.py  test_abs_author_extraction.py  test_abs_client_export.py  test_abs_ebook_sync_client.py  test_abs_grimmory_migration_routes.py  test_abs_grimmory_migration_service.py  test_abs_socket_listener.py  test_abs_unittest.py  test_alignment_service.py  test_api_errors.py  test_app_runtime.py  test_apply_settings_integration.py  test_backfill_grimmory_finish_dates.py  test_background_job_service.py  test_book_identity_merge.py  test_book_intake_service.py  test_book_metadata_service.py  test_book_repository_getters.py  test_book_repository_mutations.py  test_book_status.py  test_bookfusion_client.py  test_bookfusion_list_getters.py  test_bookfusion_repository.py  test_bookfusion_routes.py  test_bookfusion_save_journal_regressions.py  test_booklore_client.py  test_cache_cleanup.py  test_cache_cleanup_service.py  test_clear_progress.py  test_clear_progress_opt.py  test_client_poller.py  test_cover_proxy.py  test_cwa_client.py  test_dashboard_errors.py  test_database_service_integration.py  test_debounce_manager.py  test_dependency_injection.py  (+59 more)
(+177 files in other folders)
