[project]
name = "pagekeeper"
requires-python = ">=3.11"
dependencies = [
    "requests==2.32.5",
    "schedule==1.2.2",
    "faster-whisper==1.2.1",
    "deepgram-sdk==6.0.1",
    "ebooklib==0.20",
    "epubcfi==0.0.6",
    "beautifulsoup4==4.14.3",
    "rapidfuzz==3.14.3",
    "fuzzysearch==0.8.1",
    "tqdm==4.67.3",
    "gTTS==2.5.4",
    "flask==3.1.3",
    "nh3==0.3.1",
    "lxml==5.4.0",
    "defusedxml==0.7.1",
    "dependency-injector==4.48.3",
    "sqlalchemy==2.0.48",
    "alembic==1.18.4",
    "python-socketio[client]==5.16.1",
    "h11==0.16.0",
    "mkdocs-material==9.7.4",
    "mistune==3.2.0",
    "pytest-asyncio==1.3.0",
]

[tool.pytest.ini_options]
markers = ["docker: tests requiring Docker (epubcfi, ffmpeg)"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "B"]
ignore = [
    "E501",   # Line too long — many log/debug strings naturally exceed 120
    "E711",   # Comparison to None — SQLAlchemy uses `column == None` for filters
    "E712",   # Comparison to True/False — SQLAlchemy filter patterns
    "E741",   # Ambiguous variable name
    "B008",   # Function call in default argument — dependency-injector patterns
    "B905",   # zip() without strict=
    "UP035",  # Deprecated typing imports — not worth churn
    "E701",   # Multiple statements on one line — codebase uses `if x: return` style
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["F401", "E501"]
"tests/*.py" = ["F401", "F811", "E402"]
"src/db/json_db.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
